--- a/src/home/home.component.html
+++ b/src/home/home.component.html
@@ -11,7 +11,7 @@
           <i class="fas fa-house"></i> Lagos > Lekki
         </button>
       </div>
-      <div class="details details-mobile">Shortlet Apartments at Ikota-Villa Estate, Lekki, Lagos Island</div>
+      <div class="details hide-this details-mobile">Shortlet Apartments at Ikota-Villa Estate, Lekki, Lagos Island</div>
 
       <a class="hide-this" href="tel:+234 808 167 8368">
         <div class="contact-tags">
@@ -88,6 +88,12 @@
         </button>
         <button type="button" class="btn feature btn-outline-secondary">
           <i class="fas fa-check-circle"></i> Balcony <i class="fas fa-door-open"></i>
+        </button>
+        <button type="button" class="btn feature btn-outline-secondary">
+          <i class="fas fa-check-circle"></i> Lounge <i class="fas fa-chair"></i>
+        </button>
+        <button type="button" class="btn feature btn-outline-secondary">
+          <i class="fas fa-check-circle"></i> Solar Battery <i class="fas fas fa-charging-station"></i>
         </button>
       </div>
 
