--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -9,11 +9,11 @@
 .socials{font-size: 15px;
         margin-top: -3px;
         text-decoration: none;
-        color: #642a03;
+        color: #3d2103;
 }
 
 /* .fas, .fab{
-    color: #642a03;
+    color: #03033a;
 } */
 
 .contact-us-icon{
