--- a/src/topbanner/topbanner.component.html
+++ b/src/topbanner/topbanner.component.html
@@ -3,7 +3,7 @@
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <a routerLink="home" class="navbar-brand"><img width="50px" src="../favicon.ico"/> </a>
+    <a routerLink="home" class="navbar-brand"><img width="60px" src="../favicon.ico"/> </a>
     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
@@ -11,6 +11,9 @@
         </li>
         <li routerLink="properties" class="nav-item">
           <a routerLink="properties" class="nav-link">Properties</a>
+        </li>
+        <li routerLink="pictures" class="nav-item">
+          <a routerLink="pictures" class="nav-link">Gallery</a>
         </li>
         <li class="nav-item">
           <a routerLink="about" class="nav-link">About</a>
