Changed the home image

--- a/src/home/home.component.css
+++ b/src/home/home.component.css
@@ -173,7 +173,7 @@ display: none;
 
 
 .map-card {
-  background-image: url('/assets/images/10.png');
+  background-image: url('/assets/images/11.jfif');
   background-size: cover;
   background-position: center;
   border-radius: 12px;
